--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-Flask==2.2.3
+Flask>=2.2.3
 modelscope
-# numpy==1.23.5
 fairseq
 opencv-python
 timm
-ftfy==6.0.3
-tensorboardX==2.4.1
-pycocotools==2.0.4
-pycocoevalcap==1.2
+ftfy>=6.0.3
+tensorboardX>=2.4.1
+pycocotools
+pycocoevalcap>=1.2
 pytorch_lightning
 einops
 datasets
@@ -17,9 +16,8 @@ editdistance
 librosa
 python-Levenshtein
 zhconv
-pypinyin==0.47.1
-protobuf==3.20.*
+pypinyin>=0.47.1
+protobuf>=3.20.*
 transformers
 unicodedata2
 decord>=0.6.0
-
